block-2 and block-3

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <div class="col-xl-12 text-center mb-2 position-relative">
         <span class="block-top__button--top "><span>269 GTQ</span></span>
       </div>
-      <div class="col-xl-6 position-relative">
+      <div class="col-xl-6 position-relative pb-5">
         <div class="block-top__left">
           <img src="img/block_1_img.png" alt="img_1">
         </div>
       </div>
-      <div class="col-xl-6 position-relative">
+      <div class="col-xl-6 position-relative pb-5">
         <div class="block-top__right">
           <p class="block-top__text block-top__text--header">GOOD GIRL</p>
           <p class="block-top__text block-top__text--sub">NUEVO ADVANCED SERUM</p>
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <div class="block_2 position-relative">
+  <div class="block_2 position-relative pb-4">
     <div class="row">
       <div class="col-sm-6 col-xl-12 text-center">
         <span class="block_2__first-letter">GOOD</span>
@@ -65,19 +65,49 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xl-6">
+      <div class="col-xl-4">
         <div class="block_2__img position-relative">
           <img src="img/block_2_img.png" alt="img2">
         </div>
       </div>
-      <div class="col-xl-6">
-        <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
+      <div class="col-xl-8 px-lg-5">
+        <ul class="block_2__list">
+          <li class="block_2__list--items">suaviza las arrugas</li>
+          <li class="block_2__list--items">aprieta el contorno de la cara</li>
+          <li class="block_2__list--items">sintetiza el colágeno <br>
+            y la elastina de tu piel</li>
+          <li class="block_2__list--items">restaura la elasticidad de la piel</li>
         </ul>
       </div>
+    </div>
+  </div>
+  <div class="block_3">
+    <div class="row">
+      <div class="col-xl-12 mb-5">
+        <div class="block_3__title text-center">BENEFICIOS DEL SUERO</div>
+        <div class="block_3__text">
+          Los factores que provocan el envejecimiento prematuro pueden ser a nivel genético (cambios en el ADN) o
+          ser consecuencia de la influencia de la exposición a catalizadores externos que aceleran el proceso natural
+          de envejecimiento.
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-4 pt-3">
+        <div class="card">
+          <div class="card-header">Estrés: </div>
+          <div class="card-body"><img src="/img/block_3__img1.png" alt="img4"></div>
+        </div></div>
+      <div class="mb-3 col-md-6 col-lg-4 mb-lg-0 pt-3">
+        <div class="card">
+          <div class="card-header">Exposición al sol:</div>
+          <div class="card-body"><img src="/img/block_3__img2.png" alt="img5"></div>
+        </div></div>
+      <div class="col-md-12 col-lg-4">
+        <div class="card">
+          <div class="card-header">Función reducida del <br>sistema inmunológico: </div>
+          <div class="card-body"><img src="/img/block_3__img3.png" alt="img6"></div>
+        </div></div>
     </div>
   </div>
 </div>
